# handover-haven

./: .dockerignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
docs/: about.md  changelog.md  index.md
docs/companies/: index.md
docs/companies/pemi/: index.md
docs/companies/vei/: index.md
docs/companies/vfc/: index.md
docs/getting-started/: common-request-template.md  glossary.md  how-to-use.md  index.md  onboarding-guide.md  system-template.md  template.md
docs/handovers/: introduction.md
docs/handovers/lowie-dave-dichoson/: about-me.md  databases.md  system-architecture.md  systems-list.md  vfc-operations-support.md
docs/handovers/lowie-dave-dichoson/common-requests/: 000-reverse-bridge-entries.md  001-recreation-of-bridge-entries.md  002-transfer-entries-to-navision.md  003-active-users-list.md  003-backend-formulas-in-esettlement.md  004-active-users-list.md  004-manual-run-of-eod-process.md  005-bypass-synapse-validation.md  005-manual-run-of-eod-process.md  006-get-bridge-reports.md  007-get-mc-approved-transactions.md  008-new-asm-page.md  009-adding-of-new-fund.md  010-uploading-of-files-and-shortened-link.md  011-checking-of-unsettled-transactions.md  012-extract-historical-navps.md  013-extract-fund-fact-sheet.md  014-extract-voyager-transactions-with-send-date.md  index.md
docs/handovers/lowie-dave-dichoson/philequity-management-inc/: overview.md
docs/handovers/lowie-dave-dichoson/systems/: coh-cdd-console-application.md  ftr-generator.md  loi-generator.md  navision.md  pemi-website.md  (+5 more)
(+21 files in other folders)
