[project]
name = "handover-haven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.7.6",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pygments>=2.20.0",
    "pymdown-extensions>=10.21.3",
]
